# skaters

./: .gitignore  .zenodo.json  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml  rust.yml  wheels.yml
benchmarks/: FOUNDATION.md  README.md  arm_adapters.py  bench.py  bench_core.py  build_corpus_cache.py  canonical_summary_coverage.csv  canonical_summary_dm.csv  canonical_summary_scores.csv  canonical_summary_vs_laplace.csv  cir_ablation.py  coord_ablation.py  corpus.py  coverage_study.py  crps_ensemble_run.py  crps_laplace_run.py  crps_leaf.py  crps_tail_blindness.py  data  enlarge_corpus_cache.py  exhaustive_crps.py  foundation_finetune.py  foundation_pages.py  foundation_study.py  fred.py  fred_universe.py  garch_leaf.py  garch_leaf_study.py  garch_leaf_threeway.py  garch_member.py  garch_replication.py  garch_tighten.py  horizon_study.py  horserace_summary.py  large_study.py  launch_horizon_study.sh  launch_week_study.sh  make_frontier.py  markov_artifact.py  markov_forecaster.py  (+53 more)
benchmarks/anomaly/: RESULTS.md  calibration_panel.py  calibration_panel_fred.py  calibration_panel_fred_sa0.03_da0.02_n500.jsonl  calibration_panel_fred_zgpd_sa0.03_da0.02_n120.jsonl  calibration_panel_fred_zgpd_sa0.03_da0.02_n500.jsonl  calibration_panel_fronted_sa0.01_da0.005_n250.jsonl  calibration_panel_sa0.01_da0.005_n250.jsonl  fred_anomaly.py  fred_anomaly_results_n3.jsonl  fred_anomaly_results_n78.jsonl  frontend_damp.py  frontend_damp_m100_n150.jsonl  frontend_damp_m100_n2.jsonl  frontend_loglik.py  frontend_loglik_n2.jsonl  frontend_loglik_n30.jsonl  frontend_results_n2.jsonl  frontend_results_n250.jsonl  frontend_results_n60.jsonl  frontend_run.py  loglik_check.py  tail_splice_n500.jsonl  tail_splice_study.py  ucr_results_k3_n3.jsonl  ucr_results_k3_n40.jsonl  ucr_results_laplace_k3_sa0.01_da0.005_n250.jsonl  ucr_results_laplace_k3_sa0.01_da0.005_n60.jsonl  ucr_results_laplace_k3_sa0.03_da0.02_n250.jsonl  ucr_results_search_k3_n100.jsonl  ucr_results_zbank_k3_sa0.03_da0.02_n60.jsonl  ucr_run.py
benchmarks/comparisons/: .gitignore  README.md  _coverage.csv  _price_study.csv  csp_arm_study.py  csp_convergence.py  fetch_freq.py  fetch_nonprice.py  fetch_nonprice_search.py  fill_radar_matrix.sh  laplace_weight_probe.py  make_challenges_radar.py  make_radar_figure.py  make_robustness_page.py  overnight_sweep.sh  run_comparison.py  warm_freq_cache.py
benchmarks/preregistrations/: 2026-07-09-tabfm-wide.md  2026-07-09-tabfm.md  2026-07-13-prophet-wide.md  2026-07-13-tabfm-sandwich-body.md  2026-07-13-tabfm-x100-wide.md  2026-07-14-pymc-forecast-sandwich.md  2026-07-22-week-long-study.md  README.md  RUN-TABFM-WIDE.md  prophet_wide_universe.txt  tabfm_wide_universe.txt  tabfm_x100_universe.txt
docs/: CNAME  academic.css  anomaly-literature.html  challengers.html  draws.html  faq.html  guide.html  heritage.html  honest-tails.html  index.html  languages.html  metrics.html  papers.html  robustness.html  sandwich.html  scope.html  sidecar.html  skills.html  sweep_nav.py  tails.html  tiki-taka.html  timesfm.html  why-likelihood.html
docs/challengers/: pymc-forecast.html  tabfm.html
docs/demos/: index.html  normalization.html  playground.html  pyodide.html  race-engine.mjs  race.html  rosenblatt.html
examples/: benchmark_kahneman.py  correlation_matrix.py  demo.py
paper/: skaters.md
papers/: README.md  _benchmark_numbers.txt  compile_paper.sh  metrics-linkedin.txt  metrics.md  posts.md  skaters-jss.tex  skaters.bib  skaters.md  tweedie-note.md  when-to-alarm.md  why-likelihood.md
parity/: adversarial.mjs  check.mjs  gen_vectors.py  scenarios.mjs  vectors.json
rust/: Cargo.toml  PORTING.md  README.md
rust/python/: Cargo.toml  README.md  pyproject.toml
rust/python/src/: lib.rs
rust/src/: api.rs  cov.rs  dist.rs  leaf.rs  lib.rs  mathx.rs  parade.rs  periodicity.rs  runstats.rs  search.rs  skater.rs  spec.rs  tails.rs  transform.rs
rust/tests/: parity.rs  robustness.rs
skills/: anomaly-detection.md  basic-use.md  benchmark-against-laplace.md  benchmark-review.md  laplace-sandwich.md  mean-reversion.md  pretty-timeseries-page.md  residual-review.md  standardization-review.md  timesfm-study.md
tests/: test_anomaly.py  test_api.py  test_ar.py  test_ar_regularized.py  test_bayesian.py  test_bijection.py  test_brownian.py  test_calibrated.py  test_calibration.py  test_conjugate.py  test_conventions.py  test_correlated_noise.py  test_cov.py  test_cov_ensemble.py  test_coverage_gaps.py  test_diffuse_floor.py  test_dist.py  test_doob.py  test_drift.py  test_ema.py  test_ensemble.py  test_envelope.py  test_extreme_inputs.py  test_fast_backend.py  test_garch_leaf.py  test_hrp_ensemble.py  test_integration.py  test_js_parity.py  test_kahneman.py  test_laplace_contract.py  test_leaf_robustness.py  test_likelihood.py  test_markov_transform.py  test_multiscale.py  test_new_transforms.py  test_objective.py  test_ou.py  test_parade.py  test_performance_gate.py  test_periodicity.py  (+16 more)
(+81 files in other folders)
