[project]
name = "skaters"
version = "0.12.0"
description = "Fast univariate time series models that run in Pyodide"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Peter Cotton", email = "peter.cotton@microprediction.com" }
]
keywords = [
    "time series", "forecasting", "online", "distributional", "probabilistic",
    "anomaly detection", "calibration", "pit", "crps", "quantile", "pyodide",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://skaters.microprediction.org/"
Documentation = "https://skaters.microprediction.org/"
Source = "https://github.com/microprediction/skaters"
Issues = "https://github.com/microprediction/skaters/issues"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
