[package]
name = "skaters-core"
version = "0.1.0"
edition = "2021"
description = "Rust port of the skaters online distributional forecasting core, parity-gated against the Python reference."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libm = "0.2"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[profile.release]
debug = false
